Textjusteringar och tillägg av RU-X-kanaler för 70cm repeaterfrekvenser

--- a/body-vhf.tex
+++ b/body-vhf.tex
@@ -1,10 +1,7 @@
 \section{Frekvenser, ej amatörradio}
 
-Dessa frekvenser är avsedda för allmänhet eller för specifika
-ända\-mål som anges. Det innebär att de kan brukas för de ändamål som
-anges i PTS för\-fatt\-nings\-sam\-ling\-ar och sammanställning över
-ej tillståndspliktiga frekvenser. Observera att du är skyldig att
-själv kontrollera bestämmelserna innan en frekvens brukas.
+Dessa frekvenser är avsedda för allmänhet eller för specifika ända\-mål som anges. Det innebär att de kan brukas för de ändamål som anges i PTS för\-fatt\-nings\-sam\-ling\-ar och sammanställning över ej tillståndspliktiga frekvenser. Observera att du är skyldig att själv kontrollera bestämmelserna
+innan en frekvens brukas.
 
 Effekten i tabellen är ustrålad effekt PEP om inte annat anges.
 
@@ -22,10 +19,8 @@ Effekten i tabellen är ustrålad effekt PEP om inte annat anges.
 
 \footnotesize
 \begin{itemize}
-	\item[$^M$] Delas med marina VHF-bandet, kanalerna L1 och L2
-          för fritidsbåtar.
-	\item[$^P$] PMR-kanal som kan användas till vad som helst så
-          länge det är landmobil radio och effekten ej överskrids.
+	\item[$^M$] Delas med marina VHF-bandet, kanalerna L1 och L2 för fritidsbåtar.
+	\item[$^P$] PMR-kanal som kan användas till vad som helst så länge det är landmobil radio och effekten ej överskrids.
 \end{itemize}
 \normalsize
 
@@ -64,31 +59,21 @@ Kallas även SRBR för Short Range Business Radio.
 	          444,975 & SRBR K8            & 2 W             & Short range business radio
 \end{longtable}
 
-SRBR är ett ej tillståndspliktigt frekvenssegment som används för
-yrkesmässig radiotrafik.
+SRBR är ett ej tillståndspliktigt frekvenssegment som används för yrkesmässig radiotrafik.
 
-Rekommendationen är att man skall använda CTCSS eller motsvarande för
-att undvika störa och bli störd av andra stationer som delar
-frekvenserna.
+Rekommendationen är att man skall använda CTCSS eller motsvarande för att undvika störa och bli störd av andra stationer som delar frekvenserna.
 
 
 \section{Frekvenser amatörradio}
 
-I denna skrift försöker vi omfatta alla VHF och UHF-band vilket
-inkluderar 6m-bandet, 2m-bandet, 70cm-bandet och 23cm-bandet.
+I denna skrift försöker vi omfatta alla VHF och UHF-band vilket inkluderar 6m-bandet, 2m-bandet, 70cm-bandet och 23cm-bandet.
 
 \subsection{Kanalnumrering VHF/UHF}
 
-Denna typ av kanalnumrering är överenskommen inom IARU region 1 för
-6m, 2m och 70cm banden på amatörradiofrekvenser. Kanalnumreringen
-består av ett prefix som anger vilket band och här används F--6m,
-V--2m, U--70cm. Därefter används 2 siffror på 6m och 2m banden och tre
-siffror på 70cm bandet för att ange kanal.
+Denna typ av kanalnumrering är överenskommen inom IARU region 1 för 6m, 2m och 70cm banden på amatörradiofrekvenser. Kanalnumreringen består av ett prefix som anger vilket band och här används F--6m, V--2m, U--70cm. Därefter används 2 siffror på 6m och 2m banden och tre siffror på 70cm bandet för
+att ange kanal.
 
-Repeaterfrekvenser anges med tillägget R före kanalnumret och innebär
-då normalt duplex med det skift som normalt används för bandet. Vid
-repeatrar är det repeaterns utfrekvens som anges, dvs den som
-mobilstationen lyssnar på. Exempel: RV48.
+Repeaterfrekvenser anges med tillägget R före kanalnumret och innebär då normalt duplex med det skift som normalt används för bandet. Vid repeatrar är det repeaterns utfrekvens som anges, dvs den som mobilstationen lyssnar på. Exempel: RV48.
 
 \begin{tabular}{crrll}
 	\textbf{Band} & \textbf{Startfrekvens} & \textbf{Kanalraster} & \textbf{Första kanal} & \textbf{Beräknas}    \\ \hline
@@ -100,24 +85,15 @@ mobilstationen lyssnar på. Exempel: RV48.
                       &                        &                      &                       & $k=(f-430)/0,0125$   \\ \hline
 \end{tabular}
 
-Eftersom amatörradiobanden ser lite olika ut i olika länder förekommer
-det kanaler i numreringen som inte är tillåtna på vissa ställen. Det
-är därför viktig att kontrollera att man fortfarande följer
-bandplanerna i den region man är.
+Eftersom amatörradiobanden ser lite olika ut i olika länder förekommer det kanaler i numreringen som inte är tillåtna på vissa ställen. Det är därför viktig att kontrollera att man fortfarande följer bandplanerna i den region man är.
 
 \begin{itemize}
-\item I 6 m bandet finns inga FM-kanaler definierade under 51 MHz. 
-\item För 2m-bandet är FM-kanaler endast definierade från 145 MHz och
-  uppåt.
-\item I 70 cm-bandet är inga kanaler definierade i intervallet
-  432.000--433.000 MHz. Observera att startfrekvensen är utanför 70cm
-  bandplanen i IARU region 1.
+\item I 6 m bandet finns inga FM-kanaler definierade under 51 MHz.
+\item För 2m-bandet är FM-kanaler endast definierade från 145 MHz och uppåt.
+\item I 70 cm-bandet är inga kanaler definierade i intervallet 432.000--433.000 MHz. Observera att startfrekvensen är utanför 70cm bandplanen i IARU region 1.
 \end{itemize}
 
-OBS!\\ Information om kanalnumreringen för 23cm-bandet tas tacksamt
-mot. Maila mig på anders@sikvall.se om du har korrekt information.
-
-
+OBS!\\ Information om kanalnumreringen för 23cm-bandet tas tacksamt mot. Maila mig på anders@sikvall.se om du har korrekt information.
 
 \clearpage
 \subsubsection{FM-kanaler 6m-bandet}
@@ -244,12 +220,8 @@ mot. Maila mig på anders@sikvall.se om du har korrekt information.
 
 \section{JOTA, Scouters frekvenser}
 
-Scouter finns ofta QRV under vissa helger, \textit{Jamboree On The
-  Air, JOTA}, förekommer några gånger per år. Här är en
-sammanställning av de standardfrekvenser scouter nyttjar om de inte
-kör repeatrar eller leta upp motstationer själva. Scouter kan antingen
-ha egna signaler, köra under tillfälliga signaler eller vara second
-operator åt med någon klubbsignal.
+Scouter finns ofta QRV under vissa helger, \textit{Jamboree On The Air, JOTA}, förekommer några gånger per år. Här är en sammanställning av de standardfrekvenser scouter nyttjar om de inte kör repeatrar eller leta upp motstationer själva. Scouter kan antingen ha egna signaler, köra under
+tillfälliga signaler eller vara second operator åt med någon klubbsignal.
 
 \subsection{Nordiska scoutfrekvenser VHF}
 
@@ -262,17 +234,10 @@ operator åt med någon klubbsignal.
 \end{tabular}
 \end{center}
 
-Jotan hålls alltid den 3:e hela (lördag och söndag) helgen i oktober
-varje år. Jotan startar officiellt vid invigningen på lördag förmiddag
-och slutar natten till måndagen klockan 00:00. Många börjar redan på
-fredagskvällen och avslutar på söndagseftermiddagen.
+Jotan hålls alltid den 3:e hela (lördag och söndag) helgen i oktober varje år. Jotan startar officiellt vid invigningen på lördag förmiddag och slutar natten till måndagen klockan 00:00. Många börjar redan på fredagskvällen och avslutar på söndagseftermiddagen.
 
-Sändningar under denna tid förekommer från ocertifierade scouter som
-lånar klubbsignal, har en tillfällig signal utdelad, ibland lånar
-enskilda sändaramatörer ut sina signaler. Sändningarna skall dock
-alltid ske under direkt överinseende av en radioamatör men var beredd
-på att det kommer vara en viss ovana och ske en del misstag. Strunta i
-det och ge scouterna en kul radioupplevelse.
+Sändningar under denna tid förekommer från ocertifierade scouter som lånar klubbsignal, har en tillfällig signal utdelad, ibland lånar enskilda sändaramatörer ut sina signaler. Sändningarna skall dock alltid ske under direkt överinseende av en radioamatör men var beredd på att det kommer vara en
+viss ovana och ske en del misstag. Strunta i det och ge scouterna en kul radioupplevelse.
 
 \begin{landscape}
 \section{Repeatrar, länkar och fyrar}
