Mindre formatteringar och småfix

--- a/body-vhf.tex
+++ b/body-vhf.tex
@@ -313,9 +313,8 @@ viss ovana och ske en del misstag. Strunta i det och ge scouterna en kul radioup
 \subsection{Repeatrar distrikt 1}
 \footnotesize
 \begin{longtable}{llllrrlcl}
-\textbf{Funktion} & \textbf{Typ} & \textbf{Call} & \textbf{QTH} & \textbf{Frekvens} & \textbf{Skift} & \textbf{Access} & \textbf{Status} & \textbf{Locator} \\ \hline
-\endhead
-Repeater&	FM/C4FM&	SK1BL/R	&Endre	&145.7750	&-600kHz	&1750	&QRV	&JO97FO\\
+\textbf{Funktion} & \textbf{Typ} & \textbf{Call} & \textbf{QTH} & \textbf{Frekvens} & \textbf{Skift} & \textbf{Access} & \textbf{Status} & \textbf{Locator} \\ \hline \endhead
+Repeater          & FM/C4FM      & SK1BL/R       & Endre	& 145.7750          & -600kHz        & 1750            & QRV             & JO97FO           \\
 \end{longtable}
 %\begin{itemize}
 %	\item[$^1$] Öppnas även med DTMF *
@@ -325,47 +324,46 @@ Repeater&	FM/C4FM&	SK1BL/R	&Endre	&145.7750	&-600kHz	&1750	&QRV	&JO97FO\\
 \subsection{Repeatrar distrikt 2}
 \footnotesize
 \begin{longtable}{llllrrlcl}
-	\textbf{Funktion}         & \textbf{Typ}  & \textbf{Call} & \textbf{QTH}        & \textbf{Frekvens} & \textbf{Skift} & \textbf{Access}  & \textbf{Status} & \textbf{Locator} \\ \hline
-	\endhead
-	Repeater                  & FM            & SK2AU/R       & Arjeplog            & 145.7000          & -600kHz        & 1750             & QRV             & JP86XC           \\
-	Repeater                  & FM            & SM2TBQ/R      & Fatmomakke          & 145.675           & -600kHz        & 88,5Hz           & QRV             & JP75NC           \\
-	Repeater                  & FM            & SK2TP/R       & Gällivare/Malmb.    & 145.6500          & -600kHz        & 1750             & QRV             & KP07HC           \\
-	Repeater                  & FM            & SK2AU/R       & Jörn/Storklinta     & 145.7500          & -600kHz        & 1750             & QRV             & KP05BD           \\
-	Repeater                  & FM            & SK2HG/R       & Kalix               & 51.9500           & -600kHz        & 1750/100,0Hz$^1$ & QRV             & KP15NU           \\
-	Repeater                  & FM            & SK2HG/R5      & Kalix/Raggdynan     & 145.7250          & -600kHz        & 1750             & QRV             & KP15JV           \\
-	Repeater                  & FM            & SK2RJH        & Kalix/Raggdynan     & 434.7500          & -2MHz          & 1750             & QRV             & KP15JV           \\
-	Repeater                  & FM            & SK2HG/RU5     & Kalix-Vattent.      & 434.7250          & -2MHz          & 1750             & QRV             & KP15NU           \\
-	Repeater                  & FM            & SK2RFR        & Kiruna              & 145.6250          & -600kHz        & 1750             & QRV             & KP07DU           \\
-	Repeater                  & FM            & SK2RFR        & Kiruna C            & 434.8250          & -2MHz          & 1750             & QRV             & KP07DU           \\
-	Repeater                  & FM            & SM2KOT/R      & Kristineb./Hornb.   & 145.6750          & -600kHz        & 1750             & QRV             & JP95GB           \\
-	Repeater                  & FM            & SK2AZ/R       & Luleå               & 145.6500          & -600kHz        & 1750             & QRV             & KP15CO           \\
-	Repeater                  & FM            & SK2LY/R       & Lycksele            & 145.6000          & -600kHz        & 1750             & QRT             & JP94IO           \\
-	Repeater                  & FM            & SM2KXX        & Lycksele            & 434.7750          & -1,6MHz        & 1750             & QRV             & JP94HO           \\
-	Repeater                  & FM            & SK2RLE        & Lycksele/Alsb.      & 145.7750          & -600kHz        & 1750             & QRT             & JP84VP           \\
-	Repeater                  & FM            & SK2AT/R       & Nordmaling          & 434.6750          & -2MHz          & 67,0Hz           & QRV             & JP93RN           \\
-	Repeater                  & FM            & SK2RME        & Piteå               & 145.6000          & -600kHz        & 1750             & QRT             & KP05PH           \\
-	Repeater                  & FM            & SK2RME        & Piteå               & 434.6000          & -1,6MHz        & 1750             & QRV             & KP05RH           \\
-	Repeater                  & FM            & SK2RME        & Piteå               & 29.6800           & -100kHz        & 1750/67Hz        & QRV             & KP05RH           \\
-	Repeater                  & FM            & SK2RUQ        & Saxnäs/Marsfj.      & 145.7500          & -600kHz        & Mod.             & QRT             & JP74PX           \\
-	Repeater                  & FM            & SK2HG/R3      & Seskarö             & 145.6750          & -600kHz        & 1750             & QRV             & KP15UR           \\
-	Repeater                  & FM            & SK2AU/R       & Skellefteå          & 145.7000          & -600kHz        & 1750             & QRV             & KP04LS           \\
-	Repeater                  & FM            & SK2AU/R       & Skellefteå          & 434.7000          & -2MHz          & 1750             & QRV             & KP05LS           \\
-	Repeater                  & D-Star        & SK2RFV        & Skellefteå          & 434.5250          & -2MHz          & DV Carrier       & Plan            & KP04LS           \\
-	Repeater                  & FM            & SK2RMD        & Sorsele             & 145.6000          & -600kHz        & 1750             & QRV             & JP85SM           \\
-	Repeater                  & FM            & SK2RMR        & Storuman            & 145.7250          & -600kHz        & 1750             & QRV             & JP85NC           \\
-	Repeater                  & FM            & SM2NLD/R      & Storuman            & 434.7500          & -1,6MHz        & 1750             & QRV             & JP85NC           \\
-	Repeater                  & FM            & SK2RLF        & Tärnaby             & 145.6250          & -600kHz        & 1750             & QRV             & JP75PR           \\
-	Repeater                  & D-Star        & SK2AT-C       & Umeå                & 145.6875          & -600kHz        & DV Carrier       & QRV             & KP03BU           \\
-	Repeater                  & D-Star        & SK2AT-B       & Umeå                & 434.9750          & -2MHz          & DV Carrier       & QRV             & KP03BU           \\
-	Repeater                  & FM            & SL2ZA/R       & Umeå/Ersmarksb.     & 145.6000          & -600kHz        & 1750             & QRT             & KP03EV           \\
-	Repeater                  & FM            & SK2RLJ        & Umeå/Rödb.          & 145.6500          & -600kHz        & 1750             & QRV             & KP03CU           \\
-	Repeater                  & FM            & SK2RLX        & Vilhelmina          & 145.7000          & -600kHz        & 1750             & QRT             & JP84HO           \\
-	Repeater                  & FM            & SK2RLX        & Vilhelmina          & 434.7000          & -1,6MHz        & 1750             & QRT             & JP84HO           \\
-	Repeater                  & FM            & SK2RYI        & Vindeln/Åsträsk     & 145.6250          & -600kHz        & 1750             & QRV             & KP04DP           \\
-	Repeater                  & FM            & SK2RIU        & Vännäs/Granlundsb.  & 145.7250          & -600kHz        & 1750             & QRV             & JP93VU           \\
-	Repeater                  & FM            & SK2RIU        & Vännäs/Granlundsb.  & 434.7250          & -2MHz          & 1750             & QRV             & JP93VU           \\
-	Repeater                  & FM            & SK2RWJ        & Älvsbyn             & 145.6750          & -600kHz        & 1750             & QRV             & KP05LQ           \\
-	Repeater                  & FM            & SK2HG/R6      & Överkalix           & 145.7500          & -600kHz        & 1750             & QRV             & KP16KH
+\textbf{Funktion}                 & \textbf{Typ}  & \textbf{Call} & \textbf{QTH}        & \textbf{Frekvens} & \textbf{Skift} & \textbf{Access}  & \textbf{Status} & \textbf{Locator} \\ \hline \endhead
+Repeater                          & FM            & SK2AU/R       & Arjeplog            & 145.7000          & -600kHz        & 1750             & QRV             & JP86XC           \\
+Repeater                          & FM            & SM2TBQ/R      & Fatmomakke          & 145.675           & -600kHz        & 88,5Hz           & QRV             & JP75NC           \\
+Repeater                          & FM            & SK2TP/R       & Gällivare/Malmb.    & 145.6500          & -600kHz        & 1750             & QRV             & KP07HC           \\
+Repeater                          & FM            & SK2AU/R       & Jörn/Storklinta     & 145.7500          & -600kHz        & 1750             & QRV             & KP05BD           \\
+Repeater                          & FM            & SK2HG/R       & Kalix               & 51.9500           & -600kHz        & 1750/100,0Hz$^1$ & QRV             & KP15NU           \\
+Repeater                          & FM            & SK2HG/R5      & Kalix/Raggdynan     & 145.7250          & -600kHz        & 1750             & QRV             & KP15JV           \\
+Repeater                          & FM            & SK2RJH        & Kalix/Raggdynan     & 434.7500          & -2MHz          & 1750             & QRV             & KP15JV           \\
+Repeater                          & FM            & SK2HG/RU5     & Kalix-Vattent.      & 434.7250          & -2MHz          & 1750             & QRV             & KP15NU           \\
+Repeater                          & FM            & SK2RFR        & Kiruna              & 145.6250          & -600kHz        & 1750             & QRV             & KP07DU           \\
+Repeater                          & FM            & SK2RFR        & Kiruna C            & 434.8250          & -2MHz          & 1750             & QRV             & KP07DU           \\
+Repeater                          & FM            & SM2KOT/R      & Kristineb./Hornb.   & 145.6750          & -600kHz        & 1750             & QRV             & JP95GB           \\
+Repeater                          & FM            & SK2AZ/R       & Luleå               & 145.6500          & -600kHz        & 1750             & QRV             & KP15CO           \\
+Repeater                          & FM            & SK2LY/R       & Lycksele            & 145.6000          & -600kHz        & 1750             & QRT             & JP94IO           \\
+Repeater                          & FM            & SM2KXX        & Lycksele            & 434.7750          & -1,6MHz        & 1750             & QRV             & JP94HO           \\
+Repeater                          & FM            & SK2RLE        & Lycksele/Alsb.      & 145.7750          & -600kHz        & 1750             & QRT             & JP84VP           \\
+Repeater                          & FM            & SK2AT/R       & Nordmaling          & 434.6750          & -2MHz          & 67,0Hz           & QRV             & JP93RN           \\
+Repeater                          & FM            & SK2RME        & Piteå               & 145.6000          & -600kHz        & 1750             & QRT             & KP05PH           \\
+Repeater                          & FM            & SK2RME        & Piteå               & 434.6000          & -1,6MHz        & 1750             & QRV             & KP05RH           \\
+Repeater                          & FM            & SK2RME        & Piteå               & 29.6800           & -100kHz        & 1750/67Hz        & QRV             & KP05RH           \\
+Repeater                          & FM            & SK2RUQ        & Saxnäs/Marsfj.      & 145.7500          & -600kHz        & Mod.             & QRT             & JP74PX           \\
+Repeater                          & FM            & SK2HG/R3      & Seskarö             & 145.6750          & -600kHz        & 1750             & QRV             & KP15UR           \\
+Repeater                          & FM            & SK2AU/R       & Skellefteå          & 145.7000          & -600kHz        & 1750             & QRV             & KP04LS           \\
+Repeater                          & FM            & SK2AU/R       & Skellefteå          & 434.7000          & -2MHz          & 1750             & QRV             & KP05LS           \\
+Repeater                          & D-Star        & SK2RFV        & Skellefteå          & 434.5250          & -2MHz          & DV Carrier       & Plan            & KP04LS           \\
+Repeater                          & FM            & SK2RMD        & Sorsele             & 145.6000          & -600kHz        & 1750             & QRV             & JP85SM           \\
+Repeater                          & FM            & SK2RMR        & Storuman            & 145.7250          & -600kHz        & 1750             & QRV             & JP85NC           \\
+Repeater                          & FM            & SM2NLD/R      & Storuman            & 434.7500          & -1,6MHz        & 1750             & QRV             & JP85NC           \\
+Repeater                          & FM            & SK2RLF        & Tärnaby             & 145.6250          & -600kHz        & 1750             & QRV             & JP75PR           \\
+Repeater                          & D-Star        & SK2AT-C       & Umeå                & 145.6875          & -600kHz        & DV Carrier       & QRV             & KP03BU           \\
+Repeater                          & D-Star        & SK2AT-B       & Umeå                & 434.9750          & -2MHz          & DV Carrier       & QRV             & KP03BU           \\
+Repeater                          & FM            & SL2ZA/R       & Umeå/Ersmarksb.     & 145.6000          & -600kHz        & 1750             & QRT             & KP03EV           \\
+Repeater                          & FM            & SK2RLJ        & Umeå/Rödb.          & 145.6500          & -600kHz        & 1750             & QRV             & KP03CU           \\
+Repeater                          & FM            & SK2RLX        & Vilhelmina          & 145.7000          & -600kHz        & 1750             & QRT             & JP84HO           \\
+Repeater                          & FM            & SK2RLX        & Vilhelmina          & 434.7000          & -1,6MHz        & 1750             & QRT             & JP84HO           \\
+Repeater                          & FM            & SK2RYI        & Vindeln/Åsträsk     & 145.6250          & -600kHz        & 1750             & QRV             & KP04DP           \\
+Repeater                          & FM            & SK2RIU        & Vännäs/Granlundsb.  & 145.7250          & -600kHz        & 1750             & QRV             & JP93VU           \\
+Repeater                          & FM            & SK2RIU        & Vännäs/Granlundsb.  & 434.7250          & -2MHz          & 1750             & QRV             & JP93VU           \\
+Repeater                          & FM            & SK2RWJ        & Älvsbyn             & 145.6750          & -600kHz        & 1750             & QRV             & KP05LQ           \\
+Repeater                          & FM            & SK2HG/R6      & Överkalix           & 145.7500          & -600kHz        & 1750             & QRV             & KP16KH
 \end{longtable}
 \begin{itemize}
 	\item[$^1$] Öppnas även med DTMF 3
@@ -819,7 +817,7 @@ Repeater&	FM/C4FM&	SK1BL/R	&Endre	&145.7750	&-600kHz	&1750	&QRV	&JO97FO\\
 	         1272.000         & 1290.994      & 20 kHz        & ATV och Data        & Amatörtelevision ATV                                         \\ \hline
 	         1290.994         & 1291.481      & 20 kHz        & FM och DV           & Repeater in Repeat. in 1291.000--1291.475                    \\
                                   &               &               &                     & RM0 – RM19, 25 kHz, 6 MHz skift                              \\ \hline
-	         1291.494         & 1296.000      & 12 kHz        & Alla moder          &                                                              \\ \hline
+	         1291.494         & 1296.000      & 12 kHz        & Alla moder          & \\ \hline
 	         1296.000         & 1296.150      & 500 Hz        & CW,  MGM            & EME 1296.000--025, \textbf{CW anrop 1296.050}                \\
                                   &               &               &                     & PSK31 1296.138 MHz                                           \\ \hline
 	         1296.150         & 1296.400      & 2.7 kHz       & CW, SSB, MGM        & \textbf{SSB anrop 1296.200}                                  \\
