Påbörjade HF-bandplaner mm

--- a/body-vhf.tex
+++ b/body-vhf.tex
@@ -64,7 +64,7 @@ SRBR är ett ej tillståndspliktigt frekvenssegment som används för yrkesmäss
 Rekommendationen är att man skall använda CTCSS eller motsvarande för att undvika störa och bli störd av andra stationer som delar frekvenserna.
 
 
-\section{Frekvenser amatörradio}
+\section{Frekvenser amatörradio VHF--UHF}
 
 I denna skrift försöker vi omfatta alla VHF och UHF-band vilket inkluderar 6m-bandet, 2m-bandet, 70cm-bandet och 23cm-bandet.
 
