Ändrade så vi får sans-serif helvetica på mattefonterna också.

--- a/rhb-pad.tex
+++ b/rhb-pad.tex
@@ -12,6 +12,7 @@
 \usepackage{textcomp}
 \renewcommand{\familydefault}{\sfdefault}
 \usepackage{helvet} 
+\usepackage[helvet]{sfmath}
 %\usepackage{avant}
 
 \input{init-vhf}
