Förklaring på gamla kanalnummer

--- a/body-vhf.tex
+++ b/body-vhf.tex
@@ -160,6 +160,8 @@ OBS!\\ Information om kanalnumreringen för 23cm-bandet tas tacksamt mot. Maila 
 	         &       &              & 145,7875 &  RV63 & R7X
 \end{longtable}
 
+X-kanalerna uppstod när man fick platsbrist och man övergick till en 12.5~kHz kanaldelning för repeatrar. Först senare övergick man även till samma kanaldelning på övriga FM-kanaler.
+
 \clearpage
 \subsubsection{FM-kanaler 70cm-bandet}
 
@@ -215,6 +217,8 @@ OBS!\\ Information om kanalnumreringen för 23cm-bandet tas tacksamt mot. Maila 
 	434,7875 & RU383 & RU7X & 434,9875 & RU399 & RU15X\\
 	         &       &      & 435,0000 & RU400 &     \\
 \end{longtable}
+
+RU0X osv är här en efterkonstruktion. Egentligen så användes sällan ``X-frekvenserna'' på 70cm eftersom man dels hade nästan dubbla antalet frekvenser för repeatrar och sedan gammalt ville man egentligen inte ha ett smalare kanalraster, i tidernas begynnelse körde många amatörer 70cm genom frekvenstrippling från 2m. $144,000 \cdot 3 = 432,000$~MHz.
 
 \clearpage
 
