--- a/body-vhf.tex
+++ b/body-vhf.tex
@@ -132,93 +132,99 @@ OBS!\\ Information om kanalnumreringen för 23cm-bandet tas tacksamt mot. Maila 
 \subsubsection{FM-kanaler 2m-bandet}
 
 \begin{longtable}{rrl|rrl}
-\textbf{Kanal} & \textbf{Tidigare} & \textbf{Anm}   
-&  \textbf{Kanal} & \textbf{Tidigare} & \textbf{Anm} \\ \hline
-	145,2125 &   V17 &              & 145,5000 &   V40 & S20  FM Anrop \\
-	145,2250 &   V18 & S9           & 145,5125 &   V41 &  \\
-	145,2375 &   V19 & INET GW      & 145,5250 &   V42 & S21           \\
-	145,2500 &   V20 & S10          & 145,5375 &   V43 &  \\
-	145,2625 &   V21 &              & 145,5500 &   V44 & S22           \\
-	145,2750 &   V22 & S11          & 145,5625 &   V45 &  \\
-	145,2875 &   V23 & INET GW      & 145,5750 &   V46 & S23           \\
-	145,3000 &   V24 & S12  RTTY    & 145,5875 &   V47 &  \\
-	145,3125 &   V25 &              & 145,6000 &  RV48 & R0            \\
-	145,3250 &   V26 & S13          & 145,6125 &  RV49 & R0X           \\
-	145,3375 &   V27 & INET GW      & 145,6250 &  RV50 & R1            \\
-	145,3500 &   V28 & S14          & 145,6375 &  RV51 & R1X           \\
-	145,3625 &   V29 &              & 145,6500 &  RV52 & R2            \\
-	145,3750 &   V30 & S15 DV Anrop & 145,6625 &  RV53 & R2X           \\
-	145,3875 &   V31 &              & 145,6750 &  RV54 & R3            \\
-	145,4000 &   V32 & S16          & 145,6875 &  RV55 & R3X           \\
-	145,4125 &   V33 &              & 145,7000 &  RV56 & R4            \\
-	145,4250 &   V34 & S17 Scout    & 145,7125 &  RV57 & R4X           \\
-	145,4375 &   V35 &              & 145,7250 &  RV58 & R5            \\
-	145,4500 &   V36 & S18          & 145,7375 &  RV59 & R5X           \\
-	145,4625 &   V37 &              & 145,7500 &  RV60 & R6            \\
-	145,4750 &   V38 & S19          & 145,7625 &  RV61 & R6X           \\
-	145,4875 &   V39 &              & 145,7750 &  RV62 & R7            \\
-	         &       &              & 145,7875 &  RV63 & R7X
+
+\textbf{Frekvens} & \textbf{Kanal} & \textbf{Anm} & 
+\textbf{Frekvens} & \textbf{Kanal} & \textbf{Anm} \\ \hline
+
+145,2125 & V17 &              & 145,5000 & V40  & S20  FM Anrop \\
+145,2250 & V18 & S9           & 145,5125 & V41  &               \\
+145,2375 & V19 & INET GW      & 145,5250 & V42  & S21           \\
+145,2500 & V20 & S10          & 145,5375 & V43  &               \\
+145,2625 & V21 &              & 145,5500 & V44  & S22           \\
+145,2750 & V22 & S11          & 145,5625 & V45  &               \\
+145,2875 & V23 & INET GW      & 145,5750 & V46  & S23           \\
+145,3000 & V24 & S12  RTTY    & 145,5875 & V47  &               \\
+145,3125 & V25 &              & 145,6000 & RV48 & R0            \\
+145,3250 & V26 & S13          & 145,6125 & RV49 & R0X           \\
+145,3375 & V27 & INET GW      & 145,6250 & RV50 & R1            \\
+145,3500 & V28 & S14          & 145,6375 & RV51 & R1X           \\
+145,3625 & V29 &              & 145,6500 & RV52 & R2            \\
+145,3750 & V30 & S15 DV Anrop & 145,6625 & RV53 & R2X           \\
+145,3875 & V31 &              & 145,6750 & RV54 & R3            \\
+145,4000 & V32 & S16          & 145,6875 & RV55 & R3X           \\
+145,4125 & V33 &              & 145,7000 & RV56 & R4            \\
+145,4250 & V34 & S17 Scout    & 145,7125 & RV57 & R4X           \\
+145,4375 & V35 &              & 145,7250 & RV58 & R5            \\
+145,4500 & V36 & S18          & 145,7375 & RV59 & R5X           \\
+145,4625 & V37 &              & 145,7500 & RV60 & R6            \\
+145,4750 & V38 & S19          & 145,7625 & RV61 & R6X           \\
+145,4875 & V39 &              & 145,7750 & RV62 & R7            \\
+         &     &              & 145,7875 & RV63 & R7X
 \end{longtable}
 
-X-kanalerna uppstod när man fick platsbrist och man övergick till en 12.5~kHz kanaldelning för repeatrar. Först senare övergick man även till samma kanaldelning på övriga FM-kanaler.
+X-kanalerna uppstod när man fick platsbrist och man övergick till en 12.5~kHz kanaldelning för repeatrar. Först senare övergick man även till samma kanaldelning på övriga FM-kanaler. De gamla simplexkanalerna hade inte så stor spridning i Sverige men förekom rikligt t.ex. i Tyskland med S20 som anropsfrekvens (eller aktivitetscenter som det numera kallas).
 
 \clearpage
 \subsubsection{FM-kanaler 70cm-bandet}
 
 \begin{longtable}{rrl|rrl}
-\textbf{Kanal} & \textbf{Tidigare} & \textbf{Anm}   
-&  \textbf{Kanal} & \textbf{Tidigare} & \textbf{Anm} \\ \hline
-	433,4000 &  U272 & SSTV    & 433,7125 &  U297 &      \\
-	433,4125 &  U273 &         & 433,7250 &  U298 &      \\
-	433,4250 &  U274 &         & 433,7375 &  U299 &      \\
-	433,4375 &  U275 &         & 433,7500 &  U300 &      \\
-	433,4500 &  U276 & Digital & 433,7625 &  U301 &      \\
-	433,4625 &  U277 &         & 433,7750 &  U302 &      \\
-	433,4750 &  U278 &         & 433,7875 &  U303 &      \\
-	433,4875 &  U279 &         & 433,8000 &  U304 & APRS \\
-	433,5000 &  U280 & Anrop   & 433,8125 &  U305 &      \\
-	433,5125 &  U281 &         & 433,8250 &  U306 &      \\
-	433,5250 &  U282 &         & 433,8375 &  U307 &      \\
-	433,5375 &  U283 &         & 433,8500 &  U308 &      \\
-	433,5500 &  U284 &         & 433,8625 &  U309 &      \\
-	433,5625 &  U285 &         & 433,8750 &  U310 &      \\
-	433,5750 &  U286 &         & 433,8875 &  U311 &      \\
-	433,5875 &  U287 &         & 433,9000 &  U312 &      \\
-	433,6000 &  U288 & RTTY    & 433,9125 &  U313 &      \\
-	433,6125 &  U289 &         & 433,9250 &  U314 &      \\
-	433,6250 &  U290 &         & 433,9375 &  U315 &      \\
-	433,6375 &  U291 &         & 433,9500 &  U316 &      \\
-	433,6500 &  U292 &         & 433,9625 &  U317 &      \\
-	433,6625 &  U293 &         & 433,9750 &  U318 &      \\
-	433,6750 &  U294 &         & 433,9875 &  U319 &      \\
-	433,6875 &  U295 &         & 434,0000 &  U320 &      \\
-	433,7000 &  U296 & FAX     &          &       &      \\
+\textbf{Frekvens} & \textbf{Kanal} & \textbf{Anm} &  
+\textbf{Frekvens} & \textbf{Kanal} & \textbf{Anm} \\ \hline
+
+433,4000 & U272 & SSTV    & 433,7125 & U297 &      \\
+433,4125 & U273 &         & 433,7250 & U298 &      \\
+433,4250 & U274 &         & 433,7375 & U299 &      \\
+433,4375 & U275 &         & 433,7500 & U300 &      \\
+433,4500 & U276 & Digital & 433,7625 & U301 &      \\
+433,4625 & U277 &         & 433,7750 & U302 &      \\
+433,4750 & U278 &         & 433,7875 & U303 &      \\
+433,4875 & U279 &         & 433,8000 & U304 & APRS \\
+433,5000 & U280 & Anrop   & 433,8125 & U305 &      \\
+433,5125 & U281 &         & 433,8250 & U306 &      \\
+433,5250 & U282 &         & 433,8375 & U307 &      \\
+433,5375 & U283 &         & 433,8500 & U308 &      \\
+433,5500 & U284 &         & 433,8625 & U309 &      \\
+433,5625 & U285 &         & 433,8750 & U310 &      \\
+433,5750 & U286 &         & 433,8875 & U311 &      \\
+433,5875 & U287 &         & 433,9000 & U312 &      \\
+433,6000 & U288 & RTTY    & 433,9125 & U313 &      \\
+433,6125 & U289 &         & 433,9250 & U314 &      \\
+433,6250 & U290 &         & 433,9375 & U315 &      \\
+433,6375 & U291 &         & 433,9500 & U316 &      \\
+433,6500 & U292 &         & 433,9625 & U317 &      \\
+433,6625 & U293 &         & 433,9750 & U318 &      \\
+433,6750 & U294 &         & 433,9875 & U319 &      \\
+433,6875 & U295 &         & 434,0000 & U320 &      \\
+433,7000 & U296 & FAX     &          &      &      \\
+
 \end{longtable}
 
 \clearpage
 \begin{longtable}{rrl|rrl}
-\textbf{Kanal} & \textbf{Tidigare} & \textbf{Anm}   
-&  \textbf{Kanal} & \textbf{Tidigare} & \textbf{Anm} \\ \hline
-	434,6000 & RU368 & RU0  & 434,8000 & RU384 & RU8  \\
-	434,6125 & RU369 & RU0X & 434,8125 & RU385 & RU8X \\
-	434,6250 & RU370 & RU1  & 434,8250 & RU386 & RU9  \\
-	434,6375 & RU371 & RU1X & 434,8375 & RU387 & RU9X \\
-	434,6500 & RU372 & RU2  & 434,8500 & RU388 & RU10 \\
-	434,6625 & RU373 & RU2X & 434,8625 & RU389 & RU10X\\
-	434,6750 & RU374 & RU3  & 434,8750 & RU390 & RU11 \\
-	434,6875 & RU375 & RU3X & 434,8875 & RU391 & RU11X\\
-	434,7000 & RU376 & RU4  & 434,9000 & RU392 & RU12 \\
-	434,7125 & RU377 & RU4X & 434,9125 & RU393 & RU12X\\
-	434,7250 & RU378 & RU5  & 434,9250 & RU394 & RU13 \\
-	434,7375 & RU379 & RU5X & 434,9375 & RU395 & RU13X\\
-	434,7500 & RU380 & RU6  & 434,9500 & RU396 & RU14 \\
-	434,7625 & RU381 & RU6X & 434,9625 & RU397 & RU14X\\
-	434,7750 & RU382 & RU7  & 434,9750 & RU398 & RU15 \\
-	434,7875 & RU383 & RU7X & 434,9875 & RU399 & RU15X\\
-	         &       &      & 435,0000 & RU400 &     \\
+\textbf{Frekvens} & \textbf{Kanal} & \textbf{Anm}   
+&  \textbf{Frekvens} & \textbf{Kanal} & \textbf{Anm} \\ \hline
+
+434,6000 & RU368 & RU0  & 434,8000 & RU384 & RU8   \\
+434,6125 & RU369 & RU0X & 434,8125 & RU385 & RU8X  \\
+434,6250 & RU370 & RU1  & 434,8250 & RU386 & RU9   \\
+434,6375 & RU371 & RU1X & 434,8375 & RU387 & RU9X  \\
+434,6500 & RU372 & RU2  & 434,8500 & RU388 & RU10  \\
+434,6625 & RU373 & RU2X & 434,8625 & RU389 & RU10X \\
+434,6750 & RU374 & RU3  & 434,8750 & RU390 & RU11  \\
+434,6875 & RU375 & RU3X & 434,8875 & RU391 & RU11X \\
+434,7000 & RU376 & RU4  & 434,9000 & RU392 & RU12  \\
+434,7125 & RU377 & RU4X & 434,9125 & RU393 & RU12X \\
+434,7250 & RU378 & RU5  & 434,9250 & RU394 & RU13  \\
+434,7375 & RU379 & RU5X & 434,9375 & RU395 & RU13X \\
+434,7500 & RU380 & RU6  & 434,9500 & RU396 & RU14  \\
+434,7625 & RU381 & RU6X & 434,9625 & RU397 & RU14X \\
+434,7750 & RU382 & RU7  & 434,9750 & RU398 & RU15  \\
+434,7875 & RU383 & RU7X & 434,9875 & RU399 & RU15X \\
+         &       &      & 435,0000 & RU400 &       \\
+
 \end{longtable}
 
-RU0X osv är här en efterkonstruktion. Egentligen så användes sällan ``X-frekvenserna'' på 70cm eftersom man dels hade nästan dubbla antalet frekvenser för repeatrar och sedan gammalt ville man egentligen inte ha ett smalare kanalraster, i tidernas begynnelse körde många amatörer 70cm genom frekvenstrippling från 2m. $144,000 \cdot 3 = 432,000$~MHz.
+RU0X osv är här en efterkonstruktion. Egentligen så användes sällan ``X-frekvenserna'' på 70cm eftersom man dels hade nästan dubbla antalet frekvenser för repeatrar och sedan gammalt ville man egentligen inte ha ett smalare kanalraster, i tidernas begynnelse körde många amatörer 70cm genom frekvenstrippling från 2m. $144,000 \cdot 3 = 432,000$~MHz och $144,025 \cdot 3 = 432,075$~MHz varför man till och med hade bredare kanalraster de-facto.
 
 \clearpage
 
