Nivåjusteringar på en del rubriker och mindre småfixar.

--- a/body-vhf.tex
+++ b/body-vhf.tex
@@ -1,11 +1,13 @@
-\section{Frekvenser, ej amatörradio}
+\section{Frekvenser VHF--UHF}
+
+\subsection{Frekvenser ej amatörradio}
 
 Dessa frekvenser är avsedda för allmänhet eller för specifika ända\-mål som anges. Det innebär att de kan brukas för de ändamål som anges i PTS för\-fatt\-nings\-sam\-ling\-ar och sammanställning över ej tillståndspliktiga frekvenser. Observera att du är skyldig att själv kontrollera bestämmelserna
 innan en frekvens brukas.
 
 Effekten i tabellen är ustrålad effekt PEP om inte annat anges.
 
-\subsection{Jakt och jordbruksfrekvenser 155 MHz}
+\subsubsection{Jakt och jordbruksfrekvenser 155 MHz}
 \begin{longtable}{rlrl}
 \textbf{Frekvens} & \textbf{Benämning} & \textbf{Effekt} & \textbf{Användningsområde}   \\ \hline \endhead
 155,425           & Jakt K1            & 5 W             & Jakt, Jordbruk               \\
@@ -24,7 +26,7 @@ Effekten i tabellen är ustrålad effekt PEP om inte annat anges.
 \end{itemize}
 \normalsize
 
-\subsection{Öppna PMR-bandet på 446 MHz}
+\subsubsection{Öppna PMR-bandet på 446 MHz}
 \begin{longtable}{rlrl}
 \textbf{Frekvens} & \textbf{Benämning} & \textbf{Effekt} & \textbf{Användningsområde} \\ \hline \endhead
 446,00625         & PMR446 K1          & 500 mW          & PMR$^N$                    \\
@@ -43,7 +45,7 @@ Effekten i tabellen är ustrålad effekt PEP om inte annat anges.
 \end{itemize}
 \normalsize
 
-\subsection{Kortdistansradio (KDR)}
+\subsubsection{Kortdistansradio (KDR)}
 
 Kallas även SRBR för Short Range Business Radio.
 
@@ -64,11 +66,11 @@ SRBR är ett ej tillståndspliktigt frekvenssegment som används för yrkesmäss
 Rekommendationen är att man skall använda CTCSS eller motsvarande för att undvika störa och bli störd av andra stationer som delar frekvenserna.
 
 
-\section{Frekvenser amatörradio VHF--UHF}
+\subsection{Frekvenser amatörradio VHF--UHF}
 
 I denna skrift försöker vi omfatta alla VHF och UHF-band vilket inkluderar 6m-bandet, 2m-bandet, 70cm-bandet och 23cm-bandet.
 
-\subsection{Kanalnumrering VHF/UHF}
+\subsubsection{Kanalnumrering VHF/UHF}
 
 Denna typ av kanalnumrering är överenskommen inom IARU region 1 för 6m, 2m och 70cm banden på amatörradiofrekvenser. Kanalnumreringen består av ett prefix som anger vilket band och här används F--6m, V--2m, U--70cm. Därefter används 2 siffror på 6m och 2m banden och tre siffror på 70cm bandet för
 att ange kanal.
@@ -228,7 +230,7 @@ RU0X osv är här en efterkonstruktion. Egentligen så användes sällan ``X-fre
 
 \clearpage
 
-\section{JOTA, Scouters frekvenser}
+\subsection{JOTA, Scouters frekvenser}
 
 Scouter finns ofta QRV under vissa helger, \textit{Jamboree On The Air, JOTA}, förekommer några gånger per år. Här är en sammanställning av de standardfrekvenser scouter nyttjar om de inte kör repeatrar eller leta upp motstationer själva. Scouter kan antingen ha egna signaler, köra under
 tillfälliga signaler eller vara second operator åt med någon klubbsignal.
@@ -250,8 +252,8 @@ Sändningar under denna tid förekommer från ocertifierade scouter som lånar k
 viss ovana och ske en del misstag. Strunta i det och ge scouterna en kul radioupplevelse.
 
 \begin{landscape}
-\section{Repeatrar, länkar och fyrar}
-\subsection{Repeatrar distrikt 0}
+\subsection{Repeatrar, länkar och fyrar VHF/UHF}
+\subsubsection{Repeatrar distrikt 0}
 \footnotesize
 \begin{longtable}{llllrrlcl}
 	\textbf{Funktion} & \textbf{Typ} & \textbf{Call} & \textbf{QTH} & \textbf{Frekvens} & \textbf{Skift} & \textbf{Access} & \textbf{Status} & \textbf{Locator} \\ \hline
@@ -320,7 +322,7 @@ viss ovana och ske en del misstag. Strunta i det och ge scouterna en kul radioup
 
 \clearpage
 
-\subsection{Repeatrar distrikt 1}
+\subsubsection{Repeatrar distrikt 1}
 \footnotesize
 \begin{longtable}{llllrrlcl}
 \textbf{Funktion} & \textbf{Typ} & \textbf{Call} & \textbf{QTH} & \textbf{Frekvens} & \textbf{Skift} & \textbf{Access} & \textbf{Status} & \textbf{Locator} \\ \hline \endhead
@@ -331,7 +333,7 @@ Repeater          & FM/C4FM      & SK1BL/R       & Endre	& 145.7750          & -
 %\end{itemize}
 \normalsize
 
-\subsection{Repeatrar distrikt 2}
+\subsubsection{Repeatrar distrikt 2}
 \footnotesize
 \begin{longtable}{llllrrlcl}
 \textbf{Funktion}                 & \textbf{Typ}  & \textbf{Call} & \textbf{QTH}        & \textbf{Frekvens} & \textbf{Skift} & \textbf{Access}  & \textbf{Status} & \textbf{Locator} \\ \hline \endhead
@@ -379,7 +381,7 @@ Repeater                          & FM            & SK2HG/R6      & Överkalix  
 	\item[$^1$] Öppnas även med DTMF 3
 \end{itemize}
 \normalsize
-\subsection{Repeatrar distrikt 3}
+\subsubsection{Repeatrar distrikt 3}
 \footnotesize
 \begin{longtable}{llllrrlcl}
 	\textbf{Funktion}         & \textbf{Typ}  & \textbf{Call} & \textbf{QTH}        & \textbf{Frekvens} & \textbf{Skift} & \textbf{Access}  & \textbf{Status} & \textbf{Locator} \\ \hline
@@ -450,7 +452,7 @@ Repeater                          & FM            & SK2HG/R6      & Överkalix  
 	Repeater                  & FM            & SK3JR/R2      & Ö-sund/Brattås.     & 145.7875          & -600KHz        & 127,3Hz          & QRV             & JP73HC
 \end{longtable}
 \normalsize
-\subsection{Repeatrar distrikt 4}
+\subsubsection{Repeatrar distrikt 4}
 \footnotesize
 \begin{longtable}{llllrrlcl}
 	\textbf{Funktion}         & \textbf{Typ}  & \textbf{Call} & \textbf{QTH}        & \textbf{Frekvens} & \textbf{Skift} & \textbf{Access}  & \textbf{Status} & \textbf{Locator} \\ \hline
@@ -504,7 +506,7 @@ Repeater                          & FM            & SK2HG/R6      & Överkalix  
 \begin{itemize}
 \item[$^1$] Kan även öppnas med DTMF 1
 \end{itemize}
-\subsection{Repeatrar distrikt 5}
+\subsubsection{Repeatrar distrikt 5}
 \begin{longtable}{llllrrlcl}
 	\textbf{Funktion}         & \textbf{Typ}  & \textbf{Call} & \textbf{QTH}        & \textbf{Frekvens} & \textbf{Skift} & \textbf{Access}  & \textbf{Status} & \textbf{Locator} \\ \hline
 	\endhead
@@ -559,7 +561,7 @@ Repeater                          & FM            & SK2HG/R6      & Överkalix  
 	Repeater                  & FM            & SK5RHQ        & Västerås            & 145.7750          & -600KHz        & 1750/82,5Hz      & QRV             & JO89GO
 \end{longtable}
 \normalsize
-\subsection{Repeatrar distrikt 6}
+\subsubsection{Repeatrar distrikt 6}
 \footnotesize
 \begin{longtable}{llllrrlcl}
 	\textbf{Funktion}         & \textbf{Typ}  & \textbf{Call} & \textbf{QTH}        & \textbf{Frekvens} & \textbf{Skift} & \textbf{Access}  & \textbf{Status} & \textbf{Locator} \\ \hline
@@ -665,7 +667,7 @@ Repeater                          & FM            & SK2HG/R6      & Överkalix  
 	Repeater                  & FM            & SK6DZ/R       & Vårgårda            & 434.8500          & -2MHz          & 118,8Hz          & QRV             & JO68JA
 \end{longtable}
 \normalsize
-\subsection{Repeatrar distrikt 7}
+\subsubsection{Repeatrar distrikt 7}
 \footnotesize
 \begin{longtable}{llllrrlcl}
 	\textbf{Funktion}         & \textbf{Typ}  & \textbf{Call} & \textbf{QTH}        & \textbf{Frekvens} & \textbf{Skift} & \textbf{Access}  & \textbf{Status} & \textbf{Locator} \\ \hline
@@ -744,10 +746,10 @@ Repeater                          & FM            & SK2HG/R6      & Överkalix  
 \end{longtable}
 \normalsize
 %%%%%%%%%% Bandplaner här roterade 90 för enklast läsning %%%%%%%%%%
-\section{Bandplaner}
-	\subsection{Bandplan 6m 50--52 MHz}
-	\begin{tabular}{rrrll}
-		\textbf{Frekvens} &               & \textbf{BW}   & \textbf{Trafik}     & \textbf{Noteringar}                                          \\ \hline
+\subsection{Bandplaner VHF--UHF}
+\subsubsection{Bandplan 6m 50--52 MHz}
+\begin{tabular}{rrrll}
+\textbf{Frekvens} &               & \textbf{BW}   & \textbf{Trafik}     & \textbf{Noteringar}                                          \\ \hline
 		           50.000 & 50.100        & 500 Hz        & CW                  & \textbf{CW anrp. 50.050 och 50.090 (interkont.)}             \\ \hline
 		           50.100 & 50.130        & 2.7 kHz       & CW, SSB             & Interkontinental DX-trafik. Ej QSO inom Europa               \\ \hline
 		           50.100 & 50.200        & 2.7 kHz       & CW,SSB              & DX 50.110--50.130, \textbf{50.110 50.150 anrop (interkont.)} \\ \hline
@@ -762,9 +764,9 @@ Repeater                          & FM            & SK2HG/R6      & Överkalix  
 		                  &               &               &                     & RF81 – RF99                                                  \\ \hline
 \end{tabular}
 \clearpage
-\subsection{Bandplan 2m 144--146 MHz}
+\subsubsection{Bandplan 2m 144--146 MHz}
 \begin{tabular}{rrrll}
-	\textbf{Frekvens}         &               & \textbf{BW}   & \textbf{Trafik}     & \textbf{Noteringar}                                          \\ \hline
+\textbf{Frekvens}         &               & \textbf{BW}   & \textbf{Trafik}     & \textbf{Noteringar}                                          \\ \hline
 	         144.0000         & 144.1100      & 500 Hz        & CW, EME             & \textbf{CW anrop 144.050}                                    \\
                                   &               &               &                     & MS random 144.100                                            \\ \hline
 	         144.1100         & 144.1500      & 500 Hz        & CW, MGM             & EME MGM 144.120--144.160                                     \\
@@ -791,7 +793,7 @@ Repeater                          & FM            & SK2HG/R6      & Överkalix  
 	          145.806         & 146.000       & 12 kHz        & All mode            & Exklusivt satellit                                           \\ \hline
 \end{tabular}
 \clearpage
-\subsection{Bandplan 70cm 432--438 MHz}
+\subsubsection{Bandplan 70cm 432--438 MHz}
 \begin{tabular}{rrrll}
 	\textbf{Frekvens}         &               & \textbf{BW}   & \textbf{Trafik}     & \textbf{Anmärkning}                                          \\ \hline
 	         432.0000         & 432.0250      & 500 Hz        & CW                  & EME exklusivt.                                               \\ \hline
@@ -816,7 +818,7 @@ Repeater                          & FM            & SK2HG/R6      & Överkalix  
 	          435.000         & 438.000       & 20 kHz        & All mode            & Exklusivt satellit
 \end{tabular}
 %\clearpage
-\subsection{Bandplan 23cm 1240--1300 MHz}
+\subsubsection{Bandplan 23cm 1240--1300 MHz}
 \begin{tabular}{rrrll}
 	\textbf{Frekvens}         &               & \textbf{BW}   & \textbf{Trafik}     & \textbf{Anmärkning}                                          \\ \hline
 	         1240.000         & 1243.250      & 20 kHz        & Alla moder          & 1240.000 - 1241.000 Digital kommunikation                    \\ \hline
@@ -849,7 +851,7 @@ Repeater                          & FM            & SK2HG/R6      & Överkalix  
 
 \begin{landscape}
 \small
-\subsection{PTS Bandplan för VHF}
+\subsubsection{PTS Bandplan för VHF}
 \begin{longtable}{llll}
 	\textbf{Frekvens}  & \textbf{Duplex}    & \textbf{Användning}                   & \textbf{Anmärkning}            \\ \hline
 	\endhead
@@ -985,7 +987,7 @@ Repeater                          & FM            & SK2HG/R6      & Överkalix  
 \end{landscape}
 
 \begin{landscape}
-\subsection{PTS bandplan för UHF}
+\subsubsection{PTS bandplan för UHF}
 \begin{longtable}{llll}
 	\textbf{Frekvens}  & \textbf{Duplex}    & \textbf{Användning}     & \textbf{Anmärkning}                   \\ \hline
 	\endhead
