--- a/body-hf.tex
+++ b/body-hf.tex
@@ -1,5 +1,4 @@
 \begin{landscape}
-
 \section{Frekvenser Amatörradio HF}
 
 %%\section{Repeatrar, länkar och fyrar}
@@ -10,9 +9,9 @@
 %% 	\endhead
 %% 	Repeater          & FM           & SMØWIU/R      & Botkyrka     & 434.8750          & -2MHz          & 77,0Hz          & QRV             & JO89WF           \\
 
-\section{Bandplaner}
+\subsection{Bandplaner HF}
 
-\subsection{Bandplan 3.5 MHz}
+\subsubsection{Bandplan 3.5 MHz}
 \begin{tabular}{rrrll}
 \textbf{Frekvens} &      & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar}                          \\ \hline
 3500              & 3510 & 200         & CW              & Prioritet för intekontinentala QSO \\ \hline
@@ -31,7 +30,7 @@
 \end{tabular}
 \clearpage
 
-\subsection{Bandplan 7 MHz}
+\subsubsection{Bandplan 7 MHz}
 \begin{tabular}{rrrll}
 \textbf{Frekvens} &      & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar}                          \\ \hline
 7000              & 7040 & 200         & CW              & CW QRP 7030 kHz aktivitetscenter             \\ \hline
@@ -49,7 +48,7 @@
 \end{tabular}
 \clearpage
 
-\subsection{Bandplan 10 MHz}
+\subsubsection{Bandplan 10 MHz}
 \begin{tabular}{rrrll}
 \textbf{Frekvens} &        & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar}             \\ \hline
 10,100            & 10,140 & 200         & CW              & 10,116 MHz QRP Aktivitetscenter \\ \hline
@@ -57,7 +56,7 @@
 \end{tabular}
 \clearpage
 
-\subsection{Bandplan 14 MHz}
+\subsubsection{Bandplan 14 MHz}
 \begin{tabular}{rrrll}
 \multicolumn{2}{c}{\textbf{Frekvens}} &  \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
 
@@ -78,7 +77,7 @@
 \end{tabular}
 \clearpage
 
-\subsection{Bandplan 18 MHz}
+\subsubsection{Bandplan 18 MHz}
 \begin{tabular}{rrrll}
 \multicolumn{2}{c}{\textbf{Frekvens}} &  \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
 
